@startuml
namespace Yacare.ComercioBundle.Entity  {
	class ConActividades << (T,#FF7700) trait >> {
		#Actividad1
		#Actividad2
		#Actividad3
		#Actividad4
		#Actividad5
		#Actividad6
	}
	class ConDatosComercio << trait >> {
		#Local
		#ConActividades
	}
	class TramiteHabilitacionComercial << class >> {
		#Comercio
		-UsoSuelo
		--
		+EstaListoParaTerminar()
	}
	class Actividad << class >> {
		-ParentNode
		-Clanae1997
		-Clanae2010
		-ClaeAfip
		-DgrTdf
		-Clamae2014
		-CategoriaAntigua
		-CodigoCpu
		-RequiereDbeh
		-RequiereDeyma
		-Exenta
		-RequiereCamaraBarro
		-RequiereCamaraGrasa
		-RequiereInfEscolar
		-RequiereImpactoSonoro
		-RequiereFactorOcupacion
		-Ley105
		-Incluye
		-NoIncluye
		-Final
	}
	class Local << class >> {
		-Tipo
		-Superficie
		#DepositoClase
		-VeredaMunicipal
		-Canaletas
		-CestoBasura
		-PuertaEmergencia
		-AnchoSalida
		-EnParqueIndustrial
	}
	class CertificadoHabilitacionComercial << class >> {
		#Comercio
	}
	class DepositoClase << class >> {
		-Categoria
		-Tipo
		-ClaseHasta300
		-ClaseHasta1000
		-ClaseMasDe1000
	}
	class Comercio << class >> {
		#Estado
		#CertificadoHabilitacion
		#Local
		#Actividad1
		#Actividad2
		#Actividad3
		#Actividad4
		#Actividad5
		#Actividad6
	}
	
	Comercio <|-- ConDatosComercio : implementa
	
	ConDatosComercio <|.. ConActividades : implementa
	ConDatosComercio o.. Local : contiene
	
	ConActividades o-- Actividad : contiene
	
	Local o-- DepositoClase : contiene
	Local o-- Yacare.CatastroBundle.Entity.Partida : contiene
	
	TramiteHabilitacionComercial <|-- Yacare.TramitesBundle.Entity.Tramite
	TramiteHabilitacionComercial <|.. ConDatosComercio : implementa
	TramiteHabilitacionComercial o-- Yacare.CatastroBundle.Entity.UsoSuelo : contiene
	TramiteHabilitacionComercial o-- Comercio : contiene
	
	CertificadoHabilitacionComercial <|-- Yacare.TramitesBundle.Entity.Comprobante
	CertificadoHabilitacionComercial o-- Comercio : contiene
}
@enduml

